--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   http: ^0.13.5
   provider: ^6.0.5
   flutter_dotenv: ^5.0.2
+  flutter_secure_storage: ^8.0.0
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
