--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   flutter_secure_storage: ^8.0.0
   json_annotation: ^4.8.0
+  intl: ^0.18.1
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
