--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   json_annotation: ^4.8.0
   intl: ^0.18.1
   youtube_player_flutter: ^8.1.2
+  readmore: ^2.2.0
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
